--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@handsontable/vue3": "^14.5.0",
+    "chart.js": "^4.4.3",
     "flowbite": "^2.4.1",
-    "handsontable": "^14.4.0",
+    "notivue": "^2.4.4",
+    "pinia": "^2.2.0",
     "vue": "^3.4.31",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
