--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@handsontable/vue3": "^14.5.0",
     "chart.js": "^4.4.3",
     "flowbite": "^2.4.1",
+    "maska": "^3.0.1",
     "notivue": "^2.4.4",
     "pinia": "^2.2.0",
     "vue": "^3.4.31",
