--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.3",
     "flowbite": "^2.4.1",
+    "ldrs": "^1.0.2",
     "maska": "^3.0.1",
     "notivue": "^2.4.4",
     "pinia": "^2.2.0",
